@@ -1,2 +1,3 @@
 [B]Version 1.1.102[/B]
 - AagmaalPro - Domain change
+- pornez - fix categories, playback
